--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -41,10 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=1+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,10 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,12 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (a+1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,12 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a+1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,12 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a =5\n",
+    "b =2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,12 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a =b\n",
+    "b =a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,12 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a vaut 2  et b vaut 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"a vaut\",a, \" et b vaut\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,12 +273,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello world\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;hello world&#39;"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "a=\"hello world\"\n",
+    "print(a)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,10 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "5==5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -728,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
