--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -41,18 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "2"
-      ]
+      "text/plain": "2"
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,18 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "2"
-      ]
+      "text/plain": "2"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -115,17 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
+     "name": "stdout",
+     "text": "2\n"
     }
    ],
    "source": [
@@ -143,19 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "name": "stdout",
+     "text": "5.0\n"
     }
    ],
    "source": [
-    "print (a+1)"
+    " a //= 1\n",
+    "print(a)"
    ]
   },
   {
@@ -167,22 +162,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "name": "stdout",
+     "text": "6.0\n"
     }
    ],
    "source": [
     "print(a+1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -228,14 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "a =b\n",
-    "b =a"
+    "a, b = b, a\n"
    ]
   },
   {
@@ -247,21 +246,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "a vaut 2  et b vaut 2\n"
-     ]
+     "name": "stdout",
+     "text": "a vaut 2  et b vaut 5\n"
     }
    ],
    "source": [
-    "print (\"a vaut\",a, \" et b vaut\", b)"
+    "print (\"a vaut\", a, \" et b vaut\", b)"
    ]
   },
   {
@@ -333,20 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "True"
+      "text/plain": "int"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 41
     }
    ],
    "source": [
-    "5==5"
+    "type(5)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -364,10 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "5.2 == 2.5 \n",
+    "5.0 == 5\n",
+    "(5.2) == [5.2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,12 +468,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "True\n"
+    }
+   ],
+   "source": [
+    "c = 4\n",
+    "print((a % 2) == 0)\n",
+    "   \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,12 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1024"
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "2**10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -512,12 +546,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.6000000000000001"
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "0.40 + 0.20  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -528,12 +573,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.09999999962747097"
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "x= 0.1 \n",
+    "y= 2**30\n",
+    "int (x * y)/y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -567,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "tags": []
    },
@@ -595,12 +653,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;hellohellohelloworld&#39;"
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
+   "source": [
+    "(a * 3) + b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,10 +680,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;HELLO&#39;"
+     },
+     "metadata": {},
+     "execution_count": 88
+    }
+   ],
+   "source": [
+    "a.upper()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -627,26 +707,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;HELLO&#39;"
+     },
+     "metadata": {},
+     "execution_count": 92
+    }
+   ],
    "source": [
-    "6. Que vaut `a > b`?"
+    "a\n",
+    "a= a.upper()\n",
+    "a"
    ]
   },
   {
+   "source": [
+    "6. Que vaut `a > b`?"
+   ],
    "cell_type": "code",
+   "metadata": {},
    "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 94
+    }
+   ],
+   "source": [
+    "a > b\n",
+    "a < b \n",
+    "\n",
+    "3\n",
+    "# plus grande lettre "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -671,13 +781,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;3232&#39;"
+     },
+     "metadata": {},
+     "execution_count": 95
+    }
+   ],
    "source": [
-    "a = \"32\""
+    "a = \"32\"\n",
+    "a*2"
    ]
   },
   {
@@ -689,12 +809,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "64"
+     },
+     "metadata": {},
+     "execution_count": 96
+    }
+   ],
+   "source": [
+    "int(a)*2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -705,12 +836,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;4&#39;"
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
+   "source": [
+    "s = input(\"tape quelquechose au clavier\")\n",
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -721,12 +864,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: &#39;&#39;",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m&lt;ipython-input-111-c64a87fac69b&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m&quot;Nombre&quot;\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----&gt; 2\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: &#39;&#39;"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Nombre\")\n",
+    "int(s) * 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -742,7 +900,10 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "r = input(\"quelle âge as-tu ?\")\n",
+    "print (\"tu as\" + \"r\" + \"en 2020\")"
+   ]
   },
   {
    "cell_type": "markdown",
