--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
       "text/plain": "2"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 1
     }
    ],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
       "text/plain": "2"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 4
     }
    ],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -145,11 +145,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "5.0\n"
+     "text": "3\n"
     }
    ],
    "source": [
-    " a //= 1\n",
+    " a += 1\n",
     "print(a)"
    ]
   },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -170,7 +170,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "6.0\n"
+     "text": "3\n"
     }
    ],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -246,17 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "a vaut 2  et b vaut 5\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"a vaut\", a, \" et b vaut\", b)"
    ]
@@ -270,25 +264,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "hello world\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "&#39;hello world&#39;"
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=\"hello world\"\n",
     "print(a)\n",
@@ -330,18 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "int"
-     },
-     "metadata": {},
-     "execution_count": 41
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(5)\n",
     "\n",
@@ -363,18 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
+   "outputs": [],
    "source": [
     "5.2 == 2.5 \n",
     "5.0 == 5\n",
@@ -468,17 +430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "True\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = 4\n",
     "print((a % 2) == 0)\n",
@@ -495,20 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "1024"
-     },
-     "metadata": {},
-     "execution_count": 63
-    }
-   ],
+   "outputs": [],
    "source": [
     "2**10"
    ]
@@ -546,20 +493,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "0.6000000000000001"
-     },
-     "metadata": {},
-     "execution_count": 66
-    }
-   ],
+   "outputs": [],
    "source": [
     "0.40 + 0.20  "
    ]
@@ -573,20 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "0.09999999962747097"
-     },
-     "metadata": {},
-     "execution_count": 72
-    }
-   ],
+   "outputs": [],
    "source": [
     "x= 0.1 \n",
     "y= 2**30\n",
@@ -625,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -653,20 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "&#39;hellohellohelloworld&#39;"
-     },
-     "metadata": {},
-     "execution_count": 82
-    }
-   ],
+   "outputs": [],
    "source": [
     "(a * 3) + b"
    ]
@@ -680,18 +600,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "&#39;HELLO&#39;"
-     },
-     "metadata": {},
-     "execution_count": 88
-    }
-   ],
+   "outputs": [],
    "source": [
     "a.upper()"
    ]
@@ -707,18 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "&#39;HELLO&#39;"
-     },
-     "metadata": {},
-     "execution_count": 92
-    }
-   ],
+   "outputs": [],
    "source": [
     "a\n",
     "a= a.upper()\n",
@@ -736,20 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "execution_count": 94
-    }
-   ],
+   "outputs": [],
    "source": [
     "a > b\n",
     "a < b \n",
@@ -781,20 +674,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "&#39;3232&#39;"
-     },
-     "metadata": {},
-     "execution_count": 95
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"32\"\n",
     "a*2"
@@ -809,20 +693,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "64"
-     },
-     "metadata": {},
-     "execution_count": 96
-    }
-   ],
+   "outputs": [],
    "source": [
     "int(a)*2"
    ]
@@ -836,20 +711,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "&#39;4&#39;"
-     },
-     "metadata": {},
-     "execution_count": 106
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = input(\"tape quelquechose au clavier\")\n",
     "s"
@@ -864,23 +730,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: &#39;&#39;",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m&lt;ipython-input-111-c64a87fac69b&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m&quot;Nombre&quot;\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----&gt; 2\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: &#39;&#39;"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = input(\"Nombre\")\n",
     "int(s) * 2"
@@ -953,7 +807,10 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input( \"nombre\" )\n",
+    "print ( a )\n"
+   ]
   },
   {
    "cell_type": "markdown",
