--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -228,13 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2 5\n"
+    }
+   ],
    "source": [
-    "a, b = b, a\n"
+    "a, b = b, a\n",
+    "print (a, b)"
    ]
   },
   {
@@ -246,11 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "a vaut 2  et b vaut 5\n"
+    }
+   ],
    "source": [
     "print (\"a vaut\", a, \" et b vaut\", b)"
    ]
@@ -264,14 +277,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello world\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;hello world&#39;"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
    "source": [
     "a=\"hello world\"\n",
     "print(a)\n",
+    "\n",
     "a"
    ]
   },
