--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -338,12 +338,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "&lt;class &#39;int&#39;&gt;\n&lt;class &#39;float&#39;&gt;\n&lt;class &#39;str&#39;&gt;\n&lt;class &#39;int&#39;&gt;\n&lt;class &#39;float&#39;&gt;\n&lt;class &#39;int&#39;&gt;\n&lt;class &#39;bool&#39;&gt;\n"
+    }
+   ],
    "source": [
     "type(5)\n",
-    "\n",
+    "print(type(5))\n",
+    "type(5.0)\n",
+    "print(type(5.0))\n",
+    "type(\"5\")\n",
+    "print(type(\"5\"))\n",
+    "type(-5)\n",
+    "print(type(-5))\n",
+    "type(5/2)\n",
+    "print(type(5/2))\n",
+    "type(5//2)\n",
+    "print(type(5//2))\n",
+    "type(5==2)\n",
+    "print(type(5==2))\n",
     "\n"
    ]
   },
@@ -362,9 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
    "source": [
     "5.2 == 2.5 \n",
     "5.0 == 5\n",
@@ -382,12 +411,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "int"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "x=4\n",
+    "type(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -401,10 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v=149"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,12 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "13\n"
+    }
+   ],
+   "source": [
+    "print(v//11)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,10 +487,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "9"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "3 * (10 // 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -458,14 +520,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "True\n"
+    }
+   ],
    "source": [
     "c = 4\n",
-    "print((a % 2) == 0)\n",
+    "\n",
+    "print((c % 2) == 0)\n",
     "   \n",
     "\n"
    ]
@@ -479,13 +548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "115792089237316195423570985008687907853269984665640564039457584007913129639936"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
    "source": [
-    "2**10"
+    "2** 256"
    ]
   },
   {
@@ -521,13 +599,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "source": [
-    "0.40 + 0.20  "
+    "0.40 + 0.20  >= 0.6"
    ]
   },
   {
@@ -539,13 +626,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.5"
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "source": [
-    "x= 0.1 \n",
+    "x= 0.5 \n",
     "y= 2**30\n",
     "int (x * y)/y"
    ]
@@ -582,14 +678,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello\nworld\n"
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = 'world'\n",
+    "print(a) "
    ]
   },
   {
@@ -610,11 +713,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;hellohellohelloworld&#39;"
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
    "source": [
     "(a * 3) + b"
    ]
@@ -628,11 +740,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;WORLD&#39;"
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
    "source": [
-    "a.upper()"
+    "a.upper()\n",
+    "b. upper()\n"
    ]
   },
   {
@@ -646,9 +768,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;HELLO&#39;"
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
    "source": [
     "a\n",
     "a= a.upper()\n",
@@ -657,20 +788,38 @@
   },
   {
    "source": [
-    "6. Que vaut `a > b`?"
+    "6. Que vaut a > b "
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 52,
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (&lt;ipython-input-52-9bf5e7bddcce&gt;, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m&quot;&lt;ipython-input-52-9bf5e7bddcce&gt;&quot;\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    6. Que vaut a &gt; b\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3"
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
    "source": [
     "a > b\n",
     "a < b \n",
@@ -702,11 +851,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;3232&#39;"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
    "source": [
     "a = \"32\"\n",
     "a*2"
@@ -721,11 +879,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "64"
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
    "source": [
     "int(a)*2"
    ]
@@ -739,11 +906,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;yy&#39;"
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
    "source": [
     "s = input(\"tape quelquechose au clavier\")\n",
     "s"
@@ -758,11 +934,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "24"
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
    "source": [
     "s = input(\"Nombre\")\n",
     "int(s) * 2"
@@ -777,14 +962,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "tu as45en 2020\n"
+    }
+   ],
    "source": [
     "r = input(\"quelle âge as-tu ?\")\n",
-    "print (\"tu as\" + \"r\" + \"en 2020\")"
+    "print (\"tu as\" + r + \"en 2020\")"
    ]
   },
   {
