--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -460,19 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "13\n"
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-2af3143864f9>, line 2)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-2af3143864f9>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(print\"(v//11), \"+\" ,print(v%11))\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "print(v//11)\n"
+    "v=149\n",
+    "print(print\"(v//11), \"+\",print(v%11))\n"
    ]
   },
   {
@@ -1050,10 +1054,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "bonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\nbonjour\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"bonjour\" \"\\n\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
